@@ -10,6 +10,8 @@ NEW METRICS
 FIXES AND ENHANCEMENTS
 - #3508192: Make CoberturaCoverageFile threadsafe.
 - #3520789: Fix CyclomaticComplexity metric does not count null-check operator if it is applied to a method call.
+- #3523819: Omit attributes that have null value from the XML report.
+- #3523820: Reports: Support for metric values that are lists or maps.
 
 
 Changes in version 0.5 (Jan 2012)
